<resources>
    <string name="app_name">Phone Techinician</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search"> Search </string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="jalan_merdeka">Jalan Merdeka</string>
    <string name="samsung_galaxy_s10">Samsung Galaxy S10</string>
    <string name="hai_kevin_tannady">Hai, Kevin Tannady</string>
    <string name="hallo_apakah_ada_kendala_pada_smartphone_kamu">Hallo! Apakah ada kendala pada smartphone kamu?</string>
    <string name="pastikan_kamu_selalu_melakukan_pengecekan_berkala_pada_smartphone_kamu_ya">Pastikan kamu selalu melakukan pengecekan berkala pada smartphone kamu ya!</string>
    <string name="lainnya"><![CDATA[Lainnya >>]]></string>
    <string name="deskripsi">Jika kamu memerlukan bantuan saya, bisa hubungi saya secara langsung!, untuk pengalaman, dan kemampuan saya, serta alamat. Kamu dapat melihatnya dibawah sini! Semoga membantu!</string>
    <string name="feedback">Terima kasih telah menggunakan jasa saya! Alangkah baiknya jika kamu memberikan rating yang sesuai dengan kinerja saya! Dan juga sertakan feedback jika perlu! Terima Kasih!</string>
    <string name="hyperlink_email">Email\n<a href="abc@gmail.com">abc@gmail.com</a></string>
</resources>