<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUserDisplayPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_1" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hai_kevin_tannady"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvUserPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samsung_galaxy_s10"
                    android:textSize="13dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGpsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/jalan_merdeka"
                    android:layout_marginRight="7dp"
                    android:textSize="13dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivGpsIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivGpsIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/gps_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/colorCardBg"
        card_view:cardCornerRadius="6dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="horizontal">
            
            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="14dp"
                card_view:cardCornerRadius="6dp"
                card_view:cardBackgroundColor="@color/colorFragment">
                
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv1Card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hallo_apakah_ada_kendala_pada_smartphone_kamu"
                        android:textSize="11dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="7dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv2Card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="7dp"
                        android:text="@string/pastikan_kamu_selalu_melakukan_pengecekan_berkala_pada_smartphone_kamu_ya"
                        android:textSize="11dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>